Refactor spell system and fix command constructor issues
- Fixed ToggleCommand and SwitchEffectCommand constructor calls
- Reorganized import statements in EmpireWandCommand.java
- Added new enhanced spells (EnergyShield, CometEnhanced, etc.)
- Refactored existing spells (FlameWave, ChainLightning, etc.)
- Added new command classes (StatsCommand, SwitchEffectCommand)
- Updated framework services and core components
- Added comprehensive test coverage for new features
- Improved performance monitoring and task management